# end-to-end-climate-model

./: README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/carbon/: budget_summary.json  diagnostics.json
artifacts/chem/: diagnostics.json
artifacts/coupler/: conservation_ledger.json
artifacts/ebm/: posteriors_and_fit.json
artifacts/ocean/: ohc_summary.json
artifacts/sealevel/: closure.json
chem/erf/: post2010_weakening_metric.json
climate-model-repo_20251019-0032/: acceptance_gates.yaml
climate-model-repo_20251019-0032/carbon/: CONTRACT.md
climate-model-repo_20251019-0032/chem/: EXPORTS.md
climate-model-repo_20251019-0032/coupler/: field_registry.yaml
climate-model-repo_20251019-0032/docs/: climate_e_2_e_16_silos_research_plan.md  first_test_to_do_climate_system_v_0.md  provenance_template.yaml
climate_e2e/: __init__.py
climate_e2e/ebm/: __init__.py  simple_ebm.py
coupler/: field_registry.yaml
docs/: climate_model_missing_items_source_links_v_1.md  climate_model_missing_pieces_ready_to_paste_stubs_v_0.md  provenance_template.yaml
docs/artifact_schemas/: carbon_budget_summary.schema.json  coupler_conservation_ledger.schema.json  ocean_ohc_summary.schema.json
docs/modules/: module_10_atmospheric_composition_aerosols_chemistry_deep_dive.md  module_11_sea_level_total_components_deep_dive.md  module_14_regionalization_downscaling_deep_dive.md  (+6 more)
land/: erf_lulcc_timeseries.csv
registry/: datasets.yaml
shared/: constants.yaml
tests/: conftest.py  test_acceptance_gates.py  test_artifact_schemas.py  test_simple_ebm.py
(+10 files in other folders)
